# analyzing

./: .gitignore
analyzing-build/: main.py  pyproject.toml
analyzing-build/src/analyzing/build_kit/: __init__.py  collector.py  engine.py  engine_models.py  host_profile.py  loader.py  manifest_materializer.py  metadata.py  models.py  native.py  packer.py  progress.py  project.py  runtime_deps.py
analyzing-domains/analyzing-monitor/: main.py  pyproject.toml
analyzing-engine/: .gitignore  README.md  build.py  main.py  pyproject.toml
analyzing-engine/config/: engine.toml
analyzing-engine/config/infra/: storage.sqlite.toml
analyzing-engine/src/api/: deps.py  router.py
analyzing-engine/src/api/monitor/: access.py  invocations.py  overview.py  plugins.py  router.py  system.py
analyzing-engine/src/api/processor/: router.py  schema.py
analyzing-engine/src/api/runtime/: remote.py  router.py
analyzing-engine/src/api/system/: base.py  router.py
analyzing-engine/src/app/: bootstrap.py  config.py  constants.py  enums.py  lifespan.py  schemas.py
analyzing-engine/src/app/static/: docs.py
analyzing-engine/src/infra/: access_logging.py  monitoring.py  persistence.py
analyzing-engine/src/install/: rain.py  schemas.py
analyzing-engine/src/pipeline/: field_mapping.py  processor.py  schemas.py  validator.py
analyzing-engine/src/registry/: catalog.py  constants.py  manifest.py  schemas.py
analyzing-engine/src/runtime/: inproc.py  manager.py  remote.py  subproc.py
analyzing-engine/src/utils/: response.py  time.py
analyzing-plugins/parser/: main.py  pyproject.toml
analyzing-plugins/parser/parser/auto_kv_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/auto_kv_parser/auto_kv/: core.py  plugin.py
analyzing-plugins/parser/parser/bracket_kv_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/bracket_kv_parser/bracket_kv/: core.py  plugin.py
analyzing-plugins/parser/parser/choice_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/choice_parser/choice/: core.py  plugin.py
analyzing-plugins/parser/parser/regex_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/regex_parser/regex/: core.py  plugin.py
analyzing-plugins/parser/parser/str_number_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/str_number_parser/str_number/: core.py  plugin.py
analyzing-plugins/parser/parser/str_time_parser/: build.toml  plugin.toml
analyzing-plugins/parser/parser/str_time_parser/str_time/: core.py  plugin.py
analyzing-plugins/parser/parser/time_parser/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/parser/parser/time_parser/time_parser_impl/: core.py  plugin.py
analyzing-plugins/splitter/: main.py  pyproject.toml
analyzing-plugins/splitter/splitter/anchor_splitter/: build.toml  form.schema.json  plugin.toml
analyzing-plugins/splitter/splitter/line_splitter/: build.toml  (+1 more)
analyzing-sdk/analyzing-compat/: main.py  pyproject.toml
analyzing-sdk/analyzing-contracts/: main.py  pyproject.toml
analyzing-sdk/analyzing-contracts/src/analyzing/contracts/: error.py  model.py
analyzing-sdk/analyzing-persistence/: main.py  pyproject.toml
analyzing-sdk/analyzing-plugin/: main.py  pyproject.toml
analyzing-sdk/analyzing-runtime/: README.md  main.py  pyproject.toml
analyzing-sdk/analyzing-runtime/src/analyzing/runtime/: config.py  errors.py  inproc.py  mode.py  paths.py  stdio.py  subprocess.py
analyzing-test/: main.py  pyproject.toml
analyzing-web/backend/: .gitignore  README.md  main.py  pyproject.toml
analyzing-web/backend/src/api/: engine.py  host.py  lifespan.py  router.py
analyzing-web/backend/src/config/: host_config.py
analyzing-web/frontend/: AGENT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
analyzing-web/frontend/src/: App.tsx  index.css  main.tsx
(+123 files in other folders)
