[project]
name = "analyzing-contracts"
version = "1.0.0"
description = "Shared foundational contracts for the analyzing ecosystem, excluding domain-specific APIs"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "ruff>=0.15.20",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzing"]
