[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "platformdirs>=4.10.1",
    "tomlkit>=0.15.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ruff>=0.15.22",
]
